--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -137,3 +137,4 @@ jobs:
         with:
           REPO_NAME: ${{ github.repository }}
           ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CONTRIBUTOR: "## Contributors"
