--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -144,4 +144,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: docker://cjdenio/contributor_list:latest
+      - uses: akhilmhdh/contributors-readme-action@v2.3.4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
