--- a/.github/workflows/update-flake.yaml
+++ b/.github/workflows/update-flake.yaml
@@ -21,4 +21,4 @@ jobs:
           pr-labels: | # Labels to be set on the PR
             dependencies
             automated
-          token: ${{ secrets.GH_TOKEN_FOR_UPDATES }}
+          token: ${{ secrets.GITHUB_TOKEN }}
