--- a/.github/workflows/update-cargo-nix.yaml
+++ b/.github/workflows/update-cargo-nix.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GH_TOKEN_FOR_UPDATES }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: cachix/install-nix-action@v17
         with:
           extra_nix_config: |
